--- a/index.html
+++ b/index.html
@@ -50,34 +50,7 @@
 <body>
   <div class="container">
     <h2>Logowanie</h2>
-    <form method="POST" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>">
-      <?php
-      $login = $password = ""; // Inicjalizacja zmiennych do przechowywania danych logowania
-
-      if ($_SERVER["REQUEST_METHOD"] == "POST") {
-        // Pobierz i przetwórz dane z formularza
-        $login = test_input($_POST["login"]);
-        $password = test_input($_POST["password"]);
-
-        // Wykonaj weryfikację danych logowania
-        if ($login == "admin" && $password == "admin123") {
-          // Jeśli dane logowania są poprawne, możesz przekierować użytkownika na inną stronę lub wykonać inne odpowiednie działania
-          header("Location: welcome.php");
-          exit;
-        } else {
-          // Jeśli dane logowania są niepoprawne, możesz wyświetlić odpowiednie komunikaty lub podejmować inne działania
-          $error_message = "Niepoprawny login lub hasło.";
-        }
-      }
-
-      function test_input($data) {
-        $data = trim($data);
-        $data = stripslashes($data);
-        $data = htmlspecialchars($data);
-        return $data;
-      }
-      ?>
-
+    <form method="POST" action="login.php">
       <label for="login">Login:</label>
       <input type="text" id="login" name="login" placeholder="Wprowadź login" required>
 
